tests/compile_errors/028-unused-import.buzz
| Unused import
import "math";
import "std";

test "Doing nothing with the math import" {
    std.print("hello");
}